pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds_false_0/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Slytherin-orOrAnd-no-DB: "true"
    name: Slytherin-Web
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Slytherin-orOrAnd-no-DB: "true"
    name: Slytherin-App
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Hufflepuff-orOrAnd-no-DB: "true"
    name: Hufflepuff-Web
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Hufflepuff-orOrAnd-no-DB: "true"
    name: Hufflepuff-App
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Gryffindor-orOrAnd-no-DB: "true"
    name: Gryffindor-Web
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__Gryffindor-orOrAnd-no-DB: "true"
    name: Gryffindor-App
spec:
    containers: null
status: {}
