pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds_false_0/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
        nsx-id: "1925"
    creationTimestamp: null
    name: policy_0
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: Exists
                    - key: tag__DB
                      operator: DoesNotExist
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
        nsx-id: "1925"
    creationTimestamp: null
    name: policy_1
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: tag__Slytherin
              operator: Exists
            - key: tag__DB
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
        nsx-id: "1926"
    creationTimestamp: null
    name: policy_2
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
                    - key: tag__DB
                      operator: DoesNotExist
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
        nsx-id: "1926"
    creationTimestamp: null
    name: policy_3
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: tag__Gryffindor
              operator: Exists
            - key: tag__DB
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
        nsx-id: "1927"
    creationTimestamp: null
    name: policy_4
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Hufflepuff
                      operator: Exists
                    - key: tag__DB
                      operator: DoesNotExist
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
        nsx-id: "1927"
    creationTimestamp: null
    name: policy_5
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: tag__Hufflepuff
              operator: Exists
            - key: tag__DB
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: noNsxID
    creationTimestamp: null
    name: defaultDeny
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
